assets/css/plain-style.css
@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

/*--------------------------------------------------Wrapper & body--*/
#wrapper {
    display: block;
    position: fixed;
    min-height: 100vh;
    width: 100w;
    top: 0px;
    bottom: 50px;
    left: 0;
    right: 0;
    overflow: hidden;
}

/*--------------------------------------------------Container--*/

.container-fluid {
    top: 50px;
    margin: 0;
    padding: 0;
    width: 100vw;
    overflow: hidden;
}

@media only screen and (max-width: 768px) {
    .container-fluid {
        top: 50px;
        margin: 0;
        padding: 0;
        width: 100vw;
        overflow: scroll;
    }

}

/*--------------------------------------------------Font Styles--*/

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Ubuntu+Condensed", sans-serif;
    line-height: 1;
}

body {
    margin: 0;
    font-family: "Ubuntu+Condensed", sans-serif;
    line-height: 1;
    margin-bottom: 60px;
}

.pagetitle {
    font-weight: 400;
    margin-top: 50px;
    padding: 15px;
}


a {
    color: #ffffff;
    text-decoration: none;
    background-color: transparent;
}

a:hover {
    color: #ffffff;
    text-decoration: none;
    transition-duration: 0.4s;
    transform: scale(1.2);
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);        
}

.jumbotron .h1, .jumbotron h1 {
    font-size: 2.5rem;
    color: #ffffff;
}

@media only screen and (max-width: 320px) {
    .jumbotron .h1, .jumbotron h1 {
        font-size: 1.5rem;
        color: #ffffff;
    }
}

.jumbotron .p, .jumbotron p {
    color: #ffffff;
}

.vidcard-header>h3 {
    color: #000;
    font-weight: 300;
}

.vidcard-header>a {
    color: #000;
    font-weight: 300;
    text-decoration: none;
}

.vidcard-header>a:hover {
    color: #000;
    font-weight: 300;
    line-height: 1.1;
}


/*--------------------------------------------------Call-Out--*/

.callout-bg-lg {
    height: 100vh;
    background: url("../images/RingOfRath-Large.jpg");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    
}

.callout-bg-md {
    /*height: 100vh;*/
    background: url("../images/RingOfRath-Medium.jpg");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}
/*--------------------------------------------------Sign-Up modal & button Styles-*/

.jumbotron {
    padding-top: 30px;
    padding-bottom: 30px;
    margin-bottom: 30px;
    color: inherit;
    transition: background-color 3s ease-in-out;
    background-color: #0d1e2f9e;
    z-index: 1;
}

.jumbotron:hover {    
    background-color: #0d1e2f2a;    
}

.signup-modal {
    position: absolute;
    max-width: 400px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.btn.focus, .btn:focus {
    outline: 0;
    box-shadow: 0 0 0 2px #856404d9;
}

.btn-group-lg>.btn, .btn-lg {
    padding: .5rem 1rem;
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: .3rem;
}
@media only screen and (max-width: 320px) {
.btn-group-lg>.btn, .btn-lg {
    padding: .5rem 1rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .3rem;
    }
}

.help-block {
    margin-top: 1rem;
    margin-bottom: 1rem;
}


/*--------------------------------------------------Nav Bar Header--*/
.sticky {
    top: 0;
    width: 100vw;
    position: fixed;
    z-index: 1;
}

.navbar {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: .5rem 1rem;
    height: 50px;
    background-color: #313131;
    margin-bottom: 0px;
    }

.navbar-dark .navbar-toggler{
    color: rgba(0, 0, 0, 0.71);
    border-color: rgba(0,0,0,.1);
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255, 255, 255, 0.74);
    transition-duration: 0.8s;
    padding-top: 12px;
    padding-bottom: 11px;
    padding: 10px;
    text-align: left;
    
}

/* for the media header nav only */
.bg-header-col {
    background-color: #3c5b6dad;
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255, 255, 255, 0.74);
    transition-duration: 0.8s;
    padding-top: 12px;
    padding-bottom: 11px;
    padding: 10px;
    text-align: left;
    text-decoration: none;
    background-color: transparent;    
}

@media only screen and (max-width: 768px) {
.navbar-dark .navbar-nav .nav-link {
    text-align: center;
    color:rgba(255, 255, 255);
    font-weight: 500;
    background-color: #0d1e2fc4;
    }
}

.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: rgb(252, 252, 252);
}

.navbar-brand {
    display: inline-block;
    padding-top: 14px;
    padding-bottom: 14px;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;
}
.navbar-brand {
    transition-duration: 0.8s;
}

.navbar-brand:hover {
    transition-duration: 0.8s;
}


/*--------------------------------------------------Footer--*/
#footer {
    position:fixed;
    bottom: 0;
    position: fixed;
    width: 100vw;
    
}


@media only screen and (max-width: 414px) {
#footer {
    position: fixed;
    bottom: 0px;
    width: 100%;
    height: 45px;
    line-height: 1px;
    padding-top: 0px;
    }
}


@media only screen and (max-width: 320px) {
    .socialicons {
    color: #ffffff;
    padding-top: 0px;
    font-size:10px;
    padding: 0px;
    margin: 0pcx
            }
}
/* ... */

